# interop-initiative

./: .gitignore  README.md  problem-statement.md
.github/workflows/: check.yml
examples/: Cargo.toml  README.md  build.rs
examples/add-rust-to-cpp-build/: main.cpp  run.sh
examples/allocator-interop-makefile/: Cargo.toml  Makefile  README.md  main.c  run.sh
examples/build-tool-template/: main.cpp  run.sh
examples/cargo-template/: Cargo.toml  build.rs
examples/cargo-template/src/: main.rs
examples/cpp-calls-rust/: Makefile  README.md
examples/cpp-overloaded-functions/: Cargo.toml  README.md  build.rs  overloads.cpp
examples/cpp-overloading/: Cargo.toml  build.rs
examples/cpp_rust_overloading/: Cargo.toml  README.md  build.rs  run.sh
examples/fibonacci-example/: Makefile  README.md  lib.rs  main.cpp  run.sh
examples/incompatible-allocators-simple/: Readme.md  cpp.cpp  main  main.rs
examples/incompatible_allocators/: README.md  run.sh
examples/integer-roundtrip-example/: README.md  main.cpp  run.sh
examples/overloaded-multiply-by-2/: Cargo.toml  README.md  build.rs
examples/overloaded-multiply-by-2/src/: main.rs
examples/rust-cpp-basic-interop/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  main.cpp  run.sh
examples/rust-cpp-basic-interop/src/: lib.rs
examples/src/: main.rs
problem-space/: 0000-template.md  0001-incompatible-allocators.md  0002-string-interop.md  0003-type-layout.md  0004-unique-ownership.md  0005-debugging.md  0006-exceptions-and-unwinding.md  0007-cross-lang-lto.md  0008-lossless-integer-roundtrip.md
(+83 files in other folders)
